--- a/DocSearch2.1/Views/Shared/_CategoryNavBar.cshtml
+++ b/DocSearch2.1/Views/Shared/_CategoryNavBar.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model IPagedList<PublicVM>*@
-@model IEnumerable<PublicVM>
+﻿@model IEnumerable<PublicVM>
 
 <div id="category_section">
     <ul id="category_list">
