--- a/DocSearch2.1/Views/PublicVM/Index.cshtml
+++ b/DocSearch2.1/Views/PublicVM/Index.cshtml
@@ -65,7 +65,7 @@
                         else
                         {
                             <li>
-                                <p class="navLink" style="text-align: center; font-size: 150%">There are no policies</p> <!--May move styling into css-->
+                                <a class="navLink" style="text-align: center; pointer-events: none; cursor: default;">There are no policies</a> <!--May move styling into css-->
                             </li>
                         }
                     </ul>
