System category and all it's corrosponding records have been removed from the LINQ queries for public (but can still be found if user knows the documentId and links through to the doc view

--- a/DocSearch2.1/Views/Shared/_Form.cshtml
+++ b/DocSearch2.1/Views/Shared/_Form.cshtml
@@ -109,7 +109,7 @@
 
                     <div class="test col-md-6">
                         <!--Search box-->
-                        <label id="searchInputBox" for="searchInputBox">
+                        <label for="searchInputBox">
                             Search @if (TempData["Role"] != null && (string)TempData["Role"] == "Admin")
                             {<span>Document Id/</span>}Description: <input id="searchInputBox" type="search" name="searchTerm" />
                         </label>
