--- a/DocSearch2.1/Views/ErrorHandler/NotFound.cshtml
+++ b/DocSearch2.1/Views/ErrorHandler/NotFound.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿<!--This page may be unnecessary and can combine with the 1 error page-->
 @{
     ViewBag.Title = "NotFound";
     Layout = "~/Views/Shared/_Layout.cshtml";
