--- a/DocSearch2.1/Views/Shared/_Form.cshtml
+++ b/DocSearch2.1/Views/Shared/_Form.cshtml
@@ -11,9 +11,7 @@
                     @((int)DateTime.Now.Year - 1)
                 </span> to
                 <span id="currentHighYear">
-                    @DateTime.Now.Year
-                </span>
-                <span id="currentSearchTerm"></span>
+                    @DateTime.Now.Year</span><span id="currentSearchTerm"></span>
             </span>
         </p>
     </div>
@@ -88,7 +86,7 @@
                        InsertionMode = InsertionMode.ReplaceWith,
                        UpdateTargetId = "public_table",
                        OnComplete = "clearFields",
-                       OnSuccess = "updateCurrentCount" //clearFields
+                       OnSuccess = "updateCurrentCount"
                    }, new { @class = "button", id = "clearButton" })
                     </div>
 
